<resources>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accessibility_autotimer_start">Start auto-timer</string>
    <string name="accessibility_autotimer_stop">Stop auto-timer</string>
    <string name="accessibility_cancel_button">Cancel</string>
    <string name="accessibility_capture_imax_start">Start panorama</string>
    <string name="accessibility_capture_imax_stop">Stop panorama</string>
    <string name="accessibility_capture_stopped">Capture stopped</string>
    <string name="accessibility_capture_video_start">Start video</string>
    <string name="accessibility_capture_video_stop">Stop video</string>
    <string name="accessibility_cheetah_video_start">Start time lapse</string>
    <string name="accessibility_cheetah_video_stop">Stop time lapse</string>
    <string name="accessibility_close_button">Close</string>
    <string name="accessibility_close_social_share">Close Social Share</string>
    <string name="accessibility_done_button">Done</string>
    <string name="accessibility_elapsed_time_during_video_recording">Time spent recording</string>
    <string name="accessibility_filmstrip_toggle">Photo gallery</string>
    <string name="accessibility_hfr_video_start">Start slow motion</string>
    <string name="accessibility_hfr_video_stop">Stop slow motion</string>
    <string name="accessibility_imax_backtracking">Move in original direction</string>
    <string name="accessibility_imax_too_fast">Slow down</string>
    <string name="accessibility_imax_too_much_roll">Hold phone straight</string>
    <string name="accessibility_imax_too_much_tilt_down">Move up slightly</string>
    <string name="accessibility_imax_too_much_tilt_left">Move right slightly</string>
    <string name="accessibility_imax_too_much_tilt_right">Move left slightly</string>
    <string name="accessibility_imax_too_much_tilt_up">Move down slightly</string>
    <string name="accessibility_longshot_capture">Take quick video</string>
    <string name="accessibility_mode_last_filmstrip_item">Scroll to last item</string>
    <string name="accessibility_mode_next_filmstrip_item">Scroll to next item</string>
    <string name="accessibility_night_stop_button">Stop</string>
    <string name="accessibility_open_social_share">Open Social Share</string>
    <string name="accessibility_output_time_during_video_recording">Length of time lapse video</string>
    <string name="accessibility_photobooth_shutter_start">Start Photobooth Mode</string>
    <string name="accessibility_photobooth_shutter_stop">Stop Photobooth Mode</string>
    <string name="accessibility_processing_the_photo">Processing the photo</string>
    <string name="accessibility_shutter_button">Shutter</string>
    <string name="accessibility_speed">Speed is %s</string>
    <string name="accessibility_take_nightsight_button">Take night sight photo</string>
    <string name="accessibility_take_photo_button">Take photo</string>
    <string name="accessibility_take_photosphere_button">Take photosphere</string>
    <string name="accessibility_take_portrait_button">Take portrait</string>
    <string name="accessibility_unlock_to_camera">Unlock to Camera</string>
    <string name="action_share_chooser_title">Share with</string>
    <string name="advice_dirty_lens">Your lens may need cleaning</string>
    <string name="advice_dirty_lens_popup_text">"Lens smudges aren't always easy to see, and they can come from fingerprints, oil or dirt.

Clean your lens for better photo quality."</string>
    <string name="advice_scene_distance_message">Move back to improve focus</string>
    <string name="ae_af_lock_label">Exposure and focus lock</string>
    <string name="af_ae_lock">AF / AE Lock</string>
    <string name="af_desc">Focus options</string>
    <string name="af_off_far_acc_desc">Lock focus to far</string>
    <string name="af_off_far_desc">Far</string>
    <string name="af_off_infinity_acc_desc">Lock focus to infinity</string>
    <string name="af_off_infinity_desc">Infinity</string>
    <string name="af_off_near_acc_desc">Lock focus to near</string>
    <string name="af_off_near_desc">Near</string>
    <string name="af_on_acc_desc">Turn on autofocus</string>
    <string name="af_on_option_desc">Auto</string>
    <string name="af_option_desc">FOCUS</string>
    <string name="af_option_tooltip">Try focus options</string>
    <string name="all_photos">ALL PHOTOS</string>
    <string name="animation">Animation</string>
    <string name="aperture">Aperture</string>
    <string name="app_name">Camera</string>
    <string name="aspect_ratio_desc">RATIO</string>
    <string name="auto">Auto</string>
    <string name="autotimer_tutorial_body">Get in the shot and smile or make a funny face to get photos automatically. Tap the button to start.</string>
    <string name="autotimer_tutorial_title">Snap photos with a smile</string>
    <string name="barcode_chip_text">Scan barcode</string>
    <string name="bottom_center">Bottom-center</string>
    <string name="bottom_left">Bottom-left</string>
    <string name="bottom_right">Bottom-right</string>
    <string name="brightness_ev_announcement">Brightness is now %1$s</string>
    <string name="brightness_knob_accessibility_description">Brightness knob</string>
    <string name="brightness_knob_tooltip_description">Adjusts brightness</string>
    <string name="btn_last_filmstrip_item">Last</string>
    <string name="btn_next_filmstrip_item">Next</string>
    <string name="burst_date_content_description">Stack of %1$s burst photos taken on %2$s</string>
    <string name="burst_description">Tap the burst button to show the best photos only</string>
    <string name="burst_editor_best_frame_description">Best burst frame</string>
    <string name="burst_editor_frame_description">Burst frame %1$s</string>
    <string name="burst_editor_navigate_up">Navigate up</string>
    <string name="burst_editor_section_header_all">All Photos</string>
    <string name="burst_editor_section_header_best">Best Photos</string>
    <string name="burst_name">Smartburst</string>
    <string name="burst_process_creation">Saving</string>
    <string name="burst_process_done">All items processed</string>
    <string name="burst_text">Smartburst</string>
    <string name="cam_flash_auto">Auto</string>
    <string name="cam_flash_off">Off</string>
    <string name="cam_flash_on">On</string>
    <string name="camera_id_back_desc">Switch to front camera</string>
    <string name="double_tap_zoom">Zoom</string>
    <string name="mode_video">Video</string>
    <string name="photo">Photo</string>
    <string name="pref_camera_coach_summary">Hints for taking better photos</string>
    <string name="pref_camera_coach_title">Framing hints</string>
    <string name="pref_camera_custom_hotkeys_summary">Select hotkeys to control camera actions.</string>
    <string name="pref_camera_custom_hotkeys_title">Custom Hotkeys</string>
    <string name="pref_camera_dirty_lens_summary">Display warning when the lens may be too dirty to take high-quality pictures. Wiping off the lens may help.</string>
    <string name="pref_camera_dirty_lens_title">Show dirty lens warning</string>
    <string name="pref_camera_double_tap_action_title">Double-tap action</string>
    <string name="pref_camera_frequent_faces_title">Frequent Faces</string>
    <string name="pref_camera_gestures_title">Gestures</string>
    <string name="pref_camera_iris_title">Google Lens suggestions</string>
    <string name="pref_camera_mirror_image_title">Save selfie as previewed</string>
    <string name="pref_camera_picturesize_default">Full resolution</string>
    <string name="pref_camera_save_location_title">Save location</string>
    <string name="pref_camera_selfie_mirror_image_summary">Save pictures with the same orientation seen in the viewer.</string>
    <string name="pref_camera_shutter_command_title">Shutter</string>
    <string name="pref_camera_social_share_title">Social Share</string>
    <string name="pref_camera_sounds_title">Camera sounds</string>
    <string name="pref_camera_switch_camera_command_title">Switch Camera</string>
    <string name="pref_camera_switch_to_next_mode_command_title">Switch to Next Mode</string>
    <string name="pref_camera_switch_to_previous_mode_command_title">Switch to Previous Mode</string>
    <string name="pref_camera_volume_key_action_title">Volume key action</string>
    <string name="pref_camera_zoom_in_command_title">Zoom In</string>
    <string name="pref_camera_zoom_out_command_title">Zoom Out</string>
    <string name="pref_category_advanced">Advanced</string>
    <string name="pref_depth_every_photo_summary">Depth data will be saved. This data may be used by social media apps. Motion photos will be turned off and photos may take longer to process.</string>
    <string name="pref_depth_every_photo_title">Social media depth features</string>
    <string name="pref_developer_settings">Developer Settings</string>
    <string name="pref_hdr_plus_control_summary">Show manual control for HDR+. When this setting is off, HDR+ stays on all the time.</string>
    <string name="pref_hdr_plus_control_title">HDR+ control</string>
    <string name="pref_hevc_control_summary">Use H.265/HEVC format instead of H.264/AVC for a smaller file size. HEVC may not be supported on some platforms.</string>
    <string name="pref_raw_output_control_summary">Show manual control for RAW+JPEG. The RAW (DNG) file is saved separately, along with identifiable camera data, in a device folder in Google Photos. Uses additional storage.</string>
    <string name="pref_raw_output_control_title">RAW+JPEG control</string>
    <string name="pref_video_hevc">Store videos efficiently</string>
    <string name="pref_video_stabilization">Video stabilization</string>
    <string name="pref_video_ultra_high_summary">Back camera only. Uses more storage.</string>
    <string name="setting_camera_photo">Camera photo resolution</string>
    <string name="setting_camera_video">Ultra-high resolution video (4K)</string>
    <string name="setting_general">General</string>
    <string name="setting_google_feedback">Send feedback</string>
    <string name="setting_google_help">Help</string>
    <string name="setting_google_help_and_feedback">Help &amp; feedback</string>
    <string name="setting_grid_mode">Grid type</string>
    <string name="text_view_connected_text">Connected to %1$s</string>
    <string name="text_view_connecting_text">Connecting</string>
    <string name="text_view_edit_ssid_form_title">SSID</string>
    <string name="text_view_edit_text_password_title">Password</string>
    <string name="text_view_modify_dialog_title">Check Wi-Fi name &amp; password</string>
    <string name="volume_key_shutter">Shutter</string>
</resources>