<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:orderingFromXml="true" android:key="prefscreen_top"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:layout="@layout/preference_category_first_layout" android:title="@string/setting_general" android:key="pref_category_general">
		<PreferenceScreen android:icon="@drawable/hamburger" android:layout="@layout/preference_with_margin_blue" android:title="Mod settings" android:key="pref_category_advanced2" android:order="0">
			<com.google.android.apps.camera.ui.preference.ManagedSwitchPreference android:icon="@drawable/google_photos" android:layout="@layout/preference_with_margin" android:title="Use Google Photos" android:key="pref_use_gphotos" android:defaultValue="false" />
			<com.google.android.apps.camera.ui.preference.ManagedSwitchPreference android:icon="@drawable/account_multiple_outline" android:layout="@layout/preference_with_margin" android:title="Enable synthetic fill flash" android:key="pref_enable_sff" android:defaultValue="false" />
			<com.google.android.apps.camera.ui.preference.ManagedSwitchPreference android:icon="@drawable/ics_warp" android:layout="@layout/preference_with_margin" android:title="Disable face shape correction" android:key="pref_disable_facewarping" android:defaultValue="false" />
			<com.google.android.apps.camera.ui.preference.ManagedSwitchPreference android:icon="@drawable/details" android:layout="@layout/preference_with_margin" android:title="Super Res Zoom always on" android:key="pref_forcesabre_key" android:defaultValue="false" />
			<ListPreference android:icon="@drawable/ics_frames" android:layout="@layout/preference_with_margin" android:title="Non-ZSL frames" android:key="pref_nonzsl_frames" android:summary="%s" android:defaultValue="0" android:entries="@array/pref_nonzsl_entries" android:entryValues="@array/pref_nonzsl_entryvalues" />
			<ListPreference android:icon="@drawable/ics_magnify_plus_outline" android:layout="@layout/preference_with_margin" android:title="Maximum zoom level" android:key="pref_maxmag_key" android:summary="%s" android:defaultValue="0" android:entries="@array/pref_maxmag_entries" android:entryValues="@array/pref_maxmag_entryvalues" />
			<PreferenceCategory android:title="AI AWB settings" android:key="awb_settings" >
				<com.google.android.apps.camera.ui.preference.ManagedSwitchPreference android:icon="@drawable/ics_awb_zsl" android:layout="@layout/preference_with_margin" android:title="AI AWB for ZSL" android:key="pref_awb_zsl" android:defaultValue="false" />
				<com.google.android.apps.camera.ui.preference.ManagedSwitchPreference android:icon="@drawable/ics_awb_hdre" android:layout="@layout/preference_with_margin" android:title="AI AWB for HDR+E" android:key="pref_awb_hdre" android:defaultValue="true" />
				<com.google.android.apps.camera.ui.preference.ManagedSwitchPreference android:icon="@drawable/ics_awb_ns" android:layout="@layout/preference_with_margin" android:title="AI AWB for Night Sight" android:key="pref_awb_ns" android:defaultValue="true" />
			</PreferenceCategory>
			<PreferenceCategory android:title="Astrophotography settings" android:key="pref_category_advanced2_astro" >	
				<ListPreference android:icon="@drawable/ics_maxexpo" android:layout="@layout/preference_with_margin" android:title="Maximum exposure time" android:key="pref_maxexpo_key" android:summary="%s" android:defaultValue="4" android:entries="@array/pref_maxexpo_entries" android:entryValues="@array/pref_maxexpo_entryvalues" />
				<com.google.android.apps.camera.ui.preference.ManagedSwitchPreference android:icon="@drawable/ics_align" android:layout="@layout/preference_with_margin" android:title="Show light trail button" android:key="pref_align_key" android:defaultValue="false" />
				<com.google.android.apps.camera.ui.preference.ManagedSwitchPreference android:icon="@drawable/quantum_gm_ic_more_horiz_vd_theme_24" android:layout="@layout/preference_with_margin" android:title="Astrophotography countdown fix" android:summary="For those experiencing inaccurate countdown in astrophotography mode, try turning this ON. \nNOTE: this may not work all the time." android:key="pref_countdownfix_key" android:defaultValue="false" />
			</PreferenceCategory>
		</PreferenceScreen>
		<com.google.android.apps.camera.ui.preference.ManagedSwitchPreference android:icon="@drawable/quantum_gm_ic_room_gm_grey_24" android:layout="@layout/preference_with_margin" android:title="@string/pref_camera_save_location_title" android:key="pref_camera_recordlocation_key" android:order="0" android:defaultValue="false" />
        <com.google.android.apps.camera.ui.preference.ManagedSwitchPreference android:icon="@drawable/quantum_gm_ic_volume_up_gm_grey_24" android:layout="@layout/preference_with_margin" android:title="@string/pref_camera_sounds_title" android:key="pref_camera_sounds_key" android:order="1" android:defaultValue="true" />
        <com.google.android.apps.camera.ui.preference.ManagedSwitchPreference android:icon="@drawable/ic_google_lens_gm2_24px" android:layout="@layout/preference_with_margin" android:title="@string/pref_camera_iris_title" android:key="pref_camera_enable_iris" android:order="2" android:defaultValue="true" />
        <com.google.android.apps.camera.ui.preference.ManagedSwitchPreference android:icon="@drawable/quantum_ic_aspect_ratio_grey600_24" android:layout="@layout/preference_with_margin" android:title="@string/pref_camera_coach_title" android:key="pref_camera_coach_key" android:summary="@string/pref_camera_coach_summary" android:order="3" android:defaultValue="true" />
        <com.google.android.apps.camera.ui.preference.ManagedSwitchPreference android:icon="@drawable/quantum_gm_ic_camera_front_black_24" android:layout="@layout/preference_with_margin" android:title="@string/pref_camera_mirror_image_title" android:key="pref_camera_selfie_mirror_key" android:summary="@string/pref_camera_selfie_mirror_image_summary" android:order="4" android:defaultValue="false" />
        <PreferenceScreen android:icon="@drawable/quantum_gm_ic_share_black_24" android:layout="@layout/preference_with_margin" android:title="@string/pref_camera_social_share_title" android:key="pref_category_social_share" android:order="5">
            <com.google.android.apps.camera.ui.preference.ManagedSwitchPreference android:layout="@layout/preference_with_switch_button" android:key="key_social_share_opt_in" android:defaultValue="true" />
            <Preference android:icon="@drawable/quantum_gm_ic_info_outline_black_24" android:layout="@layout/preference_with_margin" android:key="key_social_share_info" />
        </PreferenceScreen>
        <PreferenceScreen android:icon="@drawable/quantum_gm_ic_touch_app_gm_grey_24" android:layout="@layout/preference_with_margin" android:title="@string/pref_camera_gestures_title" android:key="pref_category_gestures" android:order="6">
            <ListPreference android:entries="@array/pref_volume_action_entries" android:layout="@layout/preference_with_margin" android:title="@string/pref_camera_volume_key_action_title" android:key="pref_volume_key_action" android:summary="%s" android:defaultValue="@string/volume_key_shutter" android:entryValues="@array/pref_volume_action_entryvalues" />
            <ListPreference android:entries="@array/pref_double_tap_action_entries" android:layout="@layout/preference_with_margin" android:title="@string/pref_camera_double_tap_action_title" android:key="pref_double_tap_key" android:summary="%s" android:defaultValue="@string/double_tap_zoom" android:entryValues="@array/pref_double_tap_entryvalues" />
            <PreferenceScreen android:icon="@drawable/quantum_gm_ic_more_horiz_vd_theme_24" android:layout="@layout/preference_with_margin" android:title="@string/pref_camera_custom_hotkeys_title" android:key="pref_category_custom_hotkeys" android:summary="@string/pref_camera_custom_hotkeys_summary">
                <com.google.android.apps.camera.ui.preference.KeyListenerPreference android:layout="@layout/preference_with_margin" android:title="@string/pref_camera_shutter_command_title" android:key="pref_shutter_command_string" />
                <com.google.android.apps.camera.ui.preference.KeyListenerPreference android:layout="@layout/preference_with_margin" android:title="@string/pref_camera_zoom_in_command_title" android:key="pref_zoom_in_command_string" />
                <com.google.android.apps.camera.ui.preference.KeyListenerPreference android:layout="@layout/preference_with_margin" android:title="@string/pref_camera_zoom_out_command_title" android:key="pref_zoom_out_command_string" />
                <com.google.android.apps.camera.ui.preference.KeyListenerPreference android:layout="@layout/preference_with_margin" android:title="@string/pref_camera_switch_camera_command_title" android:key="pref_switch_camera_command_string" />
                <com.google.android.apps.camera.ui.preference.KeyListenerPreference android:layout="@layout/preference_with_margin" android:title="@string/pref_camera_switch_to_next_mode_command_title" android:key="pref_switch_to_next_mode_command_string" />
                <com.google.android.apps.camera.ui.preference.KeyListenerPreference android:layout="@layout/preference_with_margin" android:title="@string/pref_camera_switch_to_previous_mode_command_title" android:key="pref_switch_to_previous_mode_command_string" />
            </PreferenceScreen>
        </PreferenceScreen>
        <ListPreference android:icon="@drawable/quantum_gm_ic_grid_on_gm_grey_24" android:entries="@array/pref_grid_mode_entries" android:layout="@layout/preference_with_margin" android:title="@string/setting_grid_mode" android:key="pref_camera_grid_lines_mode" android:summary="%s" android:order="7" android:defaultValue="0" android:entryValues="@array/pref_grid_mode_entryvalues" />
        <PreferenceScreen android:icon="@drawable/quantum_gm_ic_face_black_24" android:layout="@layout/preference_with_margin" android:title="@string/pref_camera_frequent_faces_title" android:key="pref_category_frequent_faces" android:order="8">
            <com.google.android.apps.camera.ui.preference.ManagedSwitchPreference android:layout="@layout/preference_with_switch_button" android:key="key_ff_opt_in" android:defaultValue="false" />
            <com.google.android.apps.camera.ui.preference.ManagedSwitchPreference android:icon="@drawable/quantum_gm_ic_info_outline_black_24" android:layout="@layout/preference_frequent_faces" android:key="key_frequent_faces_info" />
        </PreferenceScreen>
        <PreferenceScreen android:icon="@drawable/quantum_gm_ic_more_horiz_vd_theme_24" android:layout="@layout/preference_with_margin" android:title="@string/pref_category_advanced" android:key="pref_category_advanced" android:order="255">
            <com.google.android.apps.camera.ui.preference.ManagedSwitchPreference android:icon="@drawable/ic_dirty_lens_gm2_24px" android:layout="@layout/preference_with_margin" android:title="@string/pref_camera_dirty_lens_title" android:key="pref_dirty_lens_detector_key" android:summary="@string/pref_camera_dirty_lens_summary" android:defaultValue="true" />
            <com.google.android.apps.camera.ui.preference.ManagedSwitchPreference android:icon="@drawable/quantum_gm_ic_hdr_plus_gm_grey_24" android:layout="@layout/preference_with_margin" android:title="@string/pref_hdr_plus_control_title" android:key="pref_camera_hdrplus_option_available_key" android:summary="@string/pref_hdr_plus_control_summary" android:defaultValue="false" />
            <com.google.android.apps.camera.ui.preference.ManagedSwitchPreference android:icon="@drawable/ic_raw_on_gm2_grey_24px" android:layout="@layout/preference_with_action_button" android:title="@string/pref_raw_output_control_title" android:key="pref_camera_raw_output_option_available_key" android:summary="@string/pref_raw_output_control_summary" android:defaultValue="false" />
            <com.google.android.apps.camera.ui.preference.ManagedSwitchPreference android:icon="@drawable/ic_hevc_gm2_24px" android:layout="@layout/preference_with_margin" android:title="@string/pref_video_hevc" android:key="pref_video_hevc_setting_key" android:summary="@string/pref_hevc_control_summary" android:defaultValue="false" />
            <com.google.android.apps.camera.ui.preference.ManagedSwitchPreference android:icon="@drawable/quantum_gm_ic_layers_gm_grey_24" android:layout="@layout/preference_with_margin" android:title="@string/pref_depth_every_photo_title" android:key="pref_camera_dynamic_depth_enabled_key" android:summary="@string/pref_depth_every_photo_summary" android:defaultValue="false" />
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/photo" android:key="pref_category_resolution_camera">
        <ListPreference android:icon="@drawable/quantum_gm_ic_photo_camera_gm_grey_24" android:entries="@array/pref_camera_picturesize_entries" android:layout="@layout/preference_with_margin" android:title="@string/setting_camera_photo" android:key="pref_camera_resolution" android:summary="%s" android:defaultValue="@string/pref_camera_picturesize_default" android:entryValues="@array/pref_camera_picturesize_entryvalues" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/mode_video" android:key="pref_category_resolution_video">
        <com.google.android.apps.camera.ui.preference.ManagedSwitchPreference android:icon="@drawable/quantum_gm_ic_video_camera_back_gm_grey_24" android:layout="@layout/preference_with_margin" android:title="@string/setting_camera_video" android:key="pref_video_quality_ultra_key" android:summary="@string/pref_video_ultra_high_summary" android:defaultValue="true" />
        <com.google.android.apps.camera.ui.preference.ManagedSwitchPreference android:icon="@drawable/quantum_gm_ic_video_stable_gm_grey_24" android:layout="@layout/preference_with_margin" android:title="@string/pref_video_stabilization" android:key="pref_video_stabilization_key" android:defaultValue="true" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/setting_google_help_and_feedback" android:key="pref_category_help_and_feedback">
        <Preference android:icon="@drawable/quantum_gm_ic_feedback_gm_grey_24" android:layout="@layout/preference_with_margin" android:title="@string/setting_google_feedback" android:key="pref_launch_feedback" />
        <Preference android:icon="@drawable/quantum_gm_ic_help_outline_gm_grey_24" android:layout="@layout/preference_with_margin" android:title="@string/setting_google_help" android:key="pref_launch_help" />
        <PreferenceScreen android:icon="@drawable/quantum_gm_ic_developer_mode_gm_grey_24" android:layout="@layout/preference_with_margin" android:title="@string/pref_developer_settings" android:key="pref_category_developer" />
    </PreferenceCategory>
</PreferenceScreen>