<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:orientation="vertical" android:background="@drawable/dialog_background" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.constraint.ConstraintLayout android:orientation="vertical" android:id="@id/modify_dialog" android:background="@color/background_color" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="@dimen/modify_dialog_title_size" android:textColor="@color/primary_color" android:id="@id/modify_dialog_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/modify_dialog_title_margin" android:text="@string/text_view_modify_dialog_title" android:layout_marginStart="@dimen/modify_dialog_title_margin" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <EditText android:textSize="@dimen/edit_text_ssid_text_size" android:textColor="@color/off_focus_color" android:id="@id/edit_text_ssid" android:background="@drawable/border_off_focus" android:padding="@dimen/edit_text_ssid_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/edit_text_ssid_margin_top" android:layout_marginStart="@dimen/edit_text_ssid_margin_start" android:layout_marginEnd="@dimen/edit_text_ssid_margin_end" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/modify_dialog_title" />
        <ImageButton android:id="@id/clear_ssid" android:background="@drawable/clearformbutton" android:layout_width="@dimen/clear_ssid_btn_width" android:layout_height="@dimen/clear_ssid_btn_height" android:layout_marginTop="@dimen/clear_ssid_btn_margin_top" android:layout_marginEnd="@dimen/clear_ssid_btn_margin_end" app:layout_constraintEnd_toEndOf="@id/edit_text_ssid" app:layout_constraintTop_toTopOf="@id/edit_text_ssid" />
        <TextView android:textSize="@dimen/edit_ssid_form_title_text_size" android:textColor="@color/primary_color" android:id="@id/edit_ssid_form_title" android:background="@color/background_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/edit_ssid_form_title_margin_top" android:text="@string/text_view_edit_ssid_form_title" android:layout_marginStart="@dimen/edit_ssid_form_title_margin_start" android:paddingHorizontal="@dimen/edit_ssid_form_title_padding_horizontal" app:layout_constraintStart_toStartOf="@id/edit_text_ssid" app:layout_constraintTop_toBottomOf="@id/modify_dialog_title" />
        <EditText android:textSize="@dimen/edit_text_password_text_size" android:textColor="@color/off_focus_color" android:id="@id/edit_text_password" android:background="@drawable/border_off_focus" android:padding="@dimen/edit_text_password_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/edit_text_password_margin_top" android:layout_marginStart="@dimen/edit_text_password_margin_start" android:layout_marginEnd="@dimen/edit_text_password_margin_end" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/edit_text_ssid" />
        <ImageButton android:id="@id/clear_password" android:background="@drawable/clearformbutton" android:layout_width="@dimen/clear_password_btn_width" android:layout_height="@dimen/clear_password_btn_height" android:layout_marginTop="@dimen/clear_password_btn_margin_top" android:layout_marginEnd="@dimen/clear_password_btn_margin_end" app:layout_constraintEnd_toEndOf="@id/edit_text_password" app:layout_constraintTop_toTopOf="@id/edit_text_password" />
        <TextView android:textSize="@dimen/edit_text_password_title_text_size" android:textColor="@color/primary_color" android:id="@id/edit_text_password_title" android:background="@color/background_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/edit_text_password_title_margin_top" android:text="@string/text_view_edit_text_password_title" android:layout_marginStart="@dimen/edit_text_password_title_margin_start" android:paddingHorizontal="@dimen/edit_text_password_title_padding_horizonttal" app:layout_constraintStart_toStartOf="@id/edit_text_password" app:layout_constraintTop_toBottomOf="@id/edit_text_ssid" />
    </android.support.constraint.ConstraintLayout>
    <FrameLayout android:orientation="vertical" android:id="@id/connecting_dialog" android:background="@color/background_color" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="@dimen/text_view_connecting_text_size" android:textColor="@color/primary_color" android:id="@id/text_view_connecting" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/text_view_connecting_margin" android:layout_marginTop="@dimen/text_view_connecting_margin" android:layout_marginBottom="@dimen/text_view_connecting_margin" android:text="@string/text_view_connecting_text" android:layout_alignParentEnd="true" />
        <ProgressBar android:layout_gravity="right" android:id="@id/progress_bar" android:layout_width="@dimen/progress_bar_width" android:layout_height="@dimen/progress_bar_height" android:layout_marginTop="@dimen/text_view_connecting_margin" android:layout_marginRight="@dimen/text_view_connecting_margin" />
    </FrameLayout>
    <FrameLayout android:orientation="vertical" android:id="@id/connected_dialog" android:background="@color/background_color" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="@dimen/text_view_connected_text_size" android:textColor="@color/primary_color" android:id="@id/text_view_connected" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/text_view_connected_margin" android:layout_marginTop="@dimen/text_view_connected_margin" android:layout_marginRight="@dimen/text_view_connected_margin" android:layout_marginBottom="@dimen/text_view_connected_margin" android:text="@string/text_view_connected_text" android:layout_alignParentEnd="true" />
    </FrameLayout>
</FrameLayout>